<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--PRODUCT CODE -->
        <TextView
            android:id="@+id/code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/code_title"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/code_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"/>

        <!--PRODUCT NAME -->
        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/code"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/name_title"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/code"
            android:layout_toEndOf="@id/name_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"/>

        <!-- PRODUCT PRICE -->
        <TextView
            android:id="@+id/price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/price_title"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_toEndOf="@id/price_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"/>

        <!-- PRODUCT COUNT -->
        <TextView
            android:id="@+id/count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/count_title"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_toEndOf="@id/count_title"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"/>
        <ImageButton
            android:id="@+id/count_button"
            android:background="@drawable/ic_add_circle_black_36dp"
            android:backgroundTint="@color/colorGray"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_toEndOf="@+id/count"
            android:layout_marginStart="8dp"/>
        <ImageButton
            android:id="@+id/remove_button"
            android:background="@drawable/ic_remove_circle_black_36dp"
            android:backgroundTint="@color/colorGray"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_toEndOf="@+id/count_button"
            android:layout_marginStart="8dp"/>
    </RelativeLayout>
    <View
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"/>
</android.support.v7.widget.CardView>